Update final report

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -22,7 +22,7 @@
 }
 
 \author{Seungmin Lee}
-\email{skghgus9@skku.edu}
+\email{lsmbest@g.skku.edu}
 \affiliation{%
     \institution{Sungkyunkwan University}
     \country{Republic of South Korea}
@@ -55,7 +55,8 @@
     however do not consider the importance of identity preservation. We introduce
     a novel neural network architecture that combines the U-Net architecture with
     the StyleGAN generator to achieve this goal. We experimentally show that our method
-    out-performs the previous methods in both quality and speed.
+    out-performs the previous methods in both quality and speed. Our code can be found at
+    \url{https://github.com/jinhyoungjoo/UnVeilify}
 \end{abstract}
 
 \maketitle
